# async-io-typed

./: Cargo.toml  LICENSE-MIT  MESSAGE_BINARY_FORMAT.md  README.md
.github/workflows/: rust.yml
src/: duplex.rs  lib.rs  read.rs  tests.rs  write.rs
