[package]
name = "async-io-typed"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Adapts any AsyncRead or AsyncWrite type to send serde compatible types"
readme = "README.md"
repository = "https://github.com/Xaeroxe/async-io-typed"
documentation = "https://docs.rs/async-io-typed/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures-core = "0.3"
futures-io = "0.3"
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
serde = "1.0.148"
thiserror = "1.0.37"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.22.0", features = ["rt-multi-thread"]}